update game contents